# Dirty-data-scan

./: .gitignore  README.md  main.py  pyproject.toml  setup_project_structure.sh
checkers/: completeness.py
core/: checker.py  loader.py
dataraccoon/checkers/: correlation.py  outliers.py
dataraccoon/core/: checker.py  loader.py
dataraccoon/core/checkers/: correlation.py  outliers.py
dataraccoon/scorers/: score_calculator.py
examples/: 1_uncleaned_biobankdata.csv  checker_result.csv  completeness.csv  correlation.pkl  dimensions.txt  good_data.csv  outliers.pkl  simulated_data.csv  test1.csv  test6.csv
web/: app.py  plotter.py
