[project]
name = "dirty-data-scan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.45.1",
]

packages = [
    { include = "likeminds", from = "src" }
]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'