[project]
name = "dataracoon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "streamlit>=1.45.1",
]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ["dataraccoon"]
